# aoc

./: .gitignore  README.md
.github/: test.yaml
.github/workflows/: test.yaml
aoc-2015/: Cargo.toml  README.md
aoc-2015/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
aoc-2020/: Cargo.toml
aoc-2020/src/: day1.rs  day2.rs  day3.rs  day4.rs  lib.rs
aoc-2021/: Cargo.toml
aoc-2021/src/: day1.rs  day2.rs  day3.rs  day6.rs  lib.rs
aoc-2022/: Cargo.toml
aoc-2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs
aoc-2024/: Cargo.toml  README.md
aoc-2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  runner.rs  util.rs
aoc-2025/: Cargo.toml  README.md
aoc-2025/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  lib.rs  main.rs
aoclib/: Cargo.toml
aoclib/src/: graph.rs  grid.rs  lib.rs  mat2.rs  memoizer.rs  vec2.rs
