[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"
authors = ["Jasper Fortuin <zeskeertwee@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
# some solutions rely on underflows of usize Vector2's, so they break with this on
overflow-checks = false

[profile.dev]
overflow-checks = false

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
rayon = "1.10.0"
fxhash = "0.2.1"

[dependencies.aoclib]
path = "../aoclib"